Alignment Problems Solved

--- a/CV.css
+++ b/CV.css
@@ -68,6 +68,7 @@
   font-weight: 400;
   letter-spacing: 1px;
   line-height: 2;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
   margin: 0 auto 0 0;
 }
 
@@ -87,6 +88,7 @@
   margin-left: 0;
   font-weight: 700;
   letter-spacing: 1px;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
 }
 
 .u-section-1 .u-text-3 {
@@ -94,6 +96,7 @@
   line-height: 2;
   letter-spacing: 1px;
   font-size: 1rem;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
   margin: 10px auto 0 0;
 }
 
@@ -131,6 +134,7 @@
   font-size: 1.25rem;
   line-height: 2;
   letter-spacing: 1px;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
 }
 
 .u-section-1 .u-tab-pane-5 {
@@ -149,6 +153,7 @@
   margin-top: 0;
   line-height: 2;
   letter-spacing: 1px;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
 }
 
 .u-section-1 .u-tab-pane-6 {
@@ -165,6 +170,7 @@
   line-height: 2;
   letter-spacing: 1px;
   font-size: 1.25rem;
+  text-shadow: 2px 2px 8px rgba(0,0,0,0.4);
   margin: 0 auto 0 0;
 }
 
@@ -221,11 +227,38 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1261px;
+  }
+
   .u-section-1 .u-tabs-1 {
-    min-height: 725px;
-    width: 440px;
-    margin-top: 79px;
-    margin-left: -50px;
-    margin-right: -50px;
+    min-height: 814px;
+    width: 356px;
+    margin-top: 27px;
+    margin-left: -8px;
+    margin-right: -8px;
+  }
+
+  .u-section-1 .u-text-1 {
+    font-size: 0.875rem;
+  }
+
+  .u-section-1 .u-container-layout-3 {
+    padding-bottom: 0;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    font-size: 0.75rem;
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
+  .u-section-1 .u-text-6 {
+    font-size: 0.875rem;
+  }
+
+  .u-section-1 .u-btn-1 {
+    margin-top: 53px;
   }
 }
