--- a/nicepage.css
+++ b/nicepage.css
@@ -36458,7 +36458,7 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 
   .u-header .u-menu-1 {
-    margin-left: -20px;
+    margin-left: 0;
   }
 
   .u-header .u-text-1 {
